Add references.bib accidentally and update data/references.bib To be merged later!

--- a/data/references.bib
+++ b/data/references.bib
@@ -152,6 +152,7 @@ local-url = {file://localhost/Users/Elise/Dropbox/papers3/Library.papers3/Files/
 file = {{38D02D3B-3170-4E73-9A3E-6870CD6E2FE9.pdf:/Users/Elise/Dropbox/papers3/Library.papers3/Files/38/38D02D3B-3170-4E73-9A3E-6870CD6E2FE9.pdf:application/pdf}},
 uri = {\url{papers3://publication/doi/10.1016/j.biocon.2017.08.029}}
 }
+
 @article{TorontoInternationalDataReleaseWorkshopAuthors:2009jh,
 author = {{Toronto International Data Release Workshop Authors} and Birney, Ewan and Hudson, Thomas J and Green, Eric D and Gunter, Chris and Eddy, Sean and Rogers, Jane and Harris, Jennifer R and Ehrlich, S Dusko and Apweiler, Rolf and Austin, Christopher P and Berglund, Lisa and Bobrow, Martin and Bountra, Chas and Brookes, Anthony J and Cambon-Thomsen, Anne and Carter, Nigel P and Chisholm, Rex L and Contreras, Jorge L and Cooke, Robert M and Crosby, William L and Dewar, Ken and Durbin, Richard and Dyke, Stephanie O M and Ecker, Joseph R and El Emam, Khaled and Feuk, Lars and Gabriel, Stacey B and Gallacher, John and Gelbart, William M and Granell, Antoni and Guarner, Francisco and Hubbard, Tim and Jackson, Scott A and Jennings, Jennifer L and Joly, Yann and Jones, Steven M and Kaye, Jane and Kennedy, Karen L and Knoppers, Bartha Maria and Kyrpides, Nikos C and Lowrance, William W and Luo, Jingchu and MacKay, John J and Mart{\'\i}n-Rivera, Luis and McCombie, W Richard and McPherson, John D and Miller, Linda and Miller, Webb and Moerman, Don and Mooser, Vincent and Morton, Cynthia C and Ostell, James M and Ouellette, B F Francis and Parkhill, Julian and Raina, Parminder S and Rawlings, Christopher and Scherer, Steven E and Scherer, Stephen W and Schofield, Paul N and Sensen, Christoph W and Stodden, Victoria C and Sussman, Michael R and Tanaka, Toshihiro and Thornton, Janet and Tsunoda, Tatsuhiko and Valle, David and Vuorio, Eero I and Walker, Neil M and Wallace, Susan and Weinstock, George and Whitman, William B and Worley, Kim C and Wu, Cathy and Wu, Jiayan and Yu, Jun},
 title = {{Prepublication data sharing.}},
@@ -2070,4 +2071,42 @@ keywords = {Good modelling practice; Model evaluation; model quality; Peer revie
 	doi = {10.1016/j.jenvman.2007.06.003},
 	note = {Citation Key: Bryan:2008en},
 	langid = {English}
+}
+
+@article{Gelman2013,
+	title = {The garden of forking paths: Why multiple comparisons can be a problem, even when there is no {\textquotedblleft}fishing expedition{\textquotedblright} or {\textquotedblleft}p-hacking{\textquotedblright} and the research hypothesis was posited ahead of time},
+	author = {Gelman, Andrew and Loken, Eric},
+	year = {2013},
+	date = {2013},
+	journal = {Department of Statistics, Columbia University},
+	note = {Citation Key: Gelman2013}
+}
+
+@inproceedings{Liu2020,
+	title = {Proceedings of the 2020 CHI Conference on Human Factors in Computing Systems},
+	author = {Liu, Yang and Althoff, Tim and Heer, Jeffrey},
+	year = {2020},
+	date = {2020},
+	publisher = {ACM},
+	doi = {10.1145/3313831.3376533},
+	note = {Citation Key: Liu2020}
+}
+
+@article{gould,
+	title = {A Roadmap of Questionable Research Practices in Ecological Modelling},
+	author = {Gould, Elliot and {Fraser, Hannah},  and {Rumpff, Libby},  and {Fidler, Fiona}, }
+}
+
+@article{Baldwin2022a,
+	title = {Protecting against researcher bias in secondary data analysis: challenges and potential solutions.},
+	author = {Baldwin, J. R. and Pingault, J. B. and Schoeler, T. and Sallis, H. M. and {Munafò}, M. R.},
+	year = {2022},
+	month = {01},
+	date = {2022-01},
+	journal = {Eur J Epidemiol},
+	pages = {1--10},
+	volume = {37},
+	number = {1},
+	doi = {10.1007/s10654-021-00839-0},
+	note = {Citation Key: Baldwin2022a}
 }
