--- a/index.qmd
+++ b/index.qmd
@@ -5,8 +5,9 @@ title: "Adaptive Preregistration for Model-Based Research"
 This site provides a guide to implementing *Adaptive Preregistration for Model-Based Research*, with a focus on ecological modelling as it is used in both basic and applied contexts.
 This site covers the following topics:
 
-1.  Background on researcher degrees of freedom, the risk of questionable research practices (QRPs), and introduction to preregistration as a tool for mitigating QRPs.
+1.  [Background on researcher degrees of freedom](RDF_QRP.qmd), the risk of questionable research practices (QRPs), and introduction to preregistration as a tool for mitigating QRPs.
 2.  Adaptive Preregistration
-    1.  *Background*: What is adaptive preregistration, why do we need it for registering modeling analyses, and what are its defining features?
-    2.  *A practical guide*: How to implement adaptive preregistration using [git](https://git-scm.com) and [GitHub](www.github.com).
-3.  Preregistration of model-based research in ecology and conservation. Provides an overview of the sorts of things that we should preregister when modelling, what practices to look out for, what things should be registered as decision-trees.
+    1.  [*Background*](adaptive_preregistration_background.qmd): What is adaptive preregistration, why do we need it for registering modeling analyses, and what are its defining features?
+    2.  [*A practical guide*](adaptive_preregistration_implementation.qmd): How to implement adaptive preregistration using [git](https://git-scm.com) and [GitHub](www.github.com).
+3.  [Preregistration template](preregistration_modelling.qmd) for model-based research in ecology and conservation.
+4.  TBC An overview of the sorts of things that we should preregister when modelling, what practices to look out for, what things should be registered as decision-trees.
