--- a/preregistration_modelling.qmd
+++ b/preregistration_modelling.qmd
@@ -19,7 +19,7 @@ Important components include the decision maker and stakeholders (including expe
 It should also provide a summary of the domain of applicability of the model, and reasonable extrapolation limits [@Grimm:2014es].
 :::
 
-## 1.1 Model Purpose
+## Model Context and Purpose
 
 ::: callout-note
 ## Rationale & Explanation
@@ -27,44 +27,44 @@ It should also provide a summary of the domain of applicability of the model, an
 Defining the purpose of the model is critical because the model purpose influences choices at later stages of model development [@Jakeman:2006ii].
 Common model purposes in ecology include: gaining a better qualitative understanding of the target system, synthesising and reviewing knowledge, and providing guidance for management and decision-making [@Jakeman:2006ii].
 Note that modelling objectives are distinct from the analytical objectives of the model.
+
+The scope of the model includes temporal and spatial resolutions, which should also be defined here [@Mahmoud2009].
+Any external limitations on model development, analysis and flexibility should also be outlined in this section [@Jakeman:2006ii].
 :::
 
-### 1.1.1 Define model purpose and problem context
+### Key stakeholders and model users
 
 ::: callout-caution
 ## Preregistration Item
 
--   [ ] Provide a clear statement of the modelling objectives and problem that the model seeks to illuminate. What is the purpose of the model/s? Ensure that you specify any focal taxa and study objectives, as well as any clients for whom the model is developed. Briefly outline the ecological problem and the decision-problem, including the decision-trigger and any regulatory frameworks relevant to the problem.
+Identify relevant interest groups:
+
+-   [ ] Who is the model for?
+-   [ ] Who is involved in formulating the model?
+-   [ ] How will key stakeholders be involved in model development?
+-   [ ] Describe the decision-making context in which the model will be used (if relevant).
 :::
 
-## 1.2 Specify modelling context
-
-::: callout-note
-## Rationale & Explanation
-
-The scope of the model, including temporal and spatial resolutions are defined here [@Mahmoud2009], and any limitations on model development analysis and flexibility should be outlined in this section [@Jakeman:2006ii].
-Note that the modelling context is different from the problem context which are described in 1.3.1.
-:::
-
-### 1.2.1 Identify model users / stakeholders
+### Model purpose, context and problem context
 
 ::: callout-caution
 ## Preregistration Item
 
-Identify interest groups in the modelling context.
-This includes clients, and end-users of the model.
-Who is the model for, who is involved in formulating the model?
-Who needs buy in?
-Describe the decision-making context in which the model will be used.
+Briefly outline
+
+-   [ ] the ecological problem,
+-   [ ] the decision problem (if relevant), including the decision-trigger and any regulatory frameworks relevant to the problem,
+-   [ ] how the model will address the problem, being clear about the scope of the model i.e. is the model addressing the whole problem, or part of it? Are there any linked problems that your model should consider?\
+-   [ ] Ensure that you specify any focal taxa and study objectives,
+-   [ ] Briefly outline the ecological problem and the decision-problem, including the decision-trigger and any regulatory frameworks relevant to the problem.
 :::
 
-### 1.2.2 Model Scope and Scale
+### Model Scope and Scale
 
-*Determine the temporal and spatial scope of the model. Where is the boundary of the modelled system? Everything outside beyond the boundary and not crossing it is to be ignored within the domain of the model, and everything crossing the boundary is to be treated as external forcing (known/unknown), or else as model outputs (observed, or not, Jakeman et al. 2006)* **HF comment I dont understand the preceeding sentence, the concept of boundaries of the model is foreign to me. Also, is this question more to do with describing the scope and limitations of the data rather then the model?**\*.
+*Determine the temporal and spatial scope of the model. Where is the boundary of the modelled system? Everything outside beyond the boundary and not crossing it is to be ignored within the domain of the model, and everything crossing the boundary is to be treated as external forcing (known/unknown), or else as model outputs (observed, or not, Jakeman et al. 2006)*
+
+**HF comment I dont understand the preceeding sentence, the concept of boundaries of the model is foreign to me. Also, is this question more to do with describing the scope and limitations of the data rather then the model?**\*.
 The choice of a model's boundaries is closely linked to the choice of how finely to aggregate the behaviour within the model (Jakeman et al., 2006) - what is the intended scale and resolution of the model (temporal, spatial or otherwise)?
-
-Explain how any key concepts or terms within problem or decision-making contexts, such as regulatory terms, will be operationalised and defined in a biologically meaningful way to answer the research question appropriately?
-(Should this last step go here or within define conceptual framework?. ***HF comment. I think it belongs with the conceptual framework***).
 
 What is the intended domain of applicability of the model, what is the extent of acceptable extrapolations (Grimm)?
 This is relevant to model transferability... (similar to a COG statement..)\* A comment:This section feels a bit too big and confusing from my perspective and I do think you might need to move some of it to a different section to reduce the risk of misinterpretation.
@@ -74,28 +74,37 @@ You could have a section for the spatial/temporal boundaries of the study, and a
 This makes sense to me in how I design experiments, if I have too many confounding variables and not enough spatial and environmental replication then I'm less likely to make any broad claims.
 However, if I have controlled or experimentally manipulated factors then I feel safer making bigger generalisations about results.
 
-### 1.2.3 Logistical Constraints
+### Logistical Constraints
 
-*Time-frame - When must the model by completed, e.g. to help make a decision?*
+::: callout-caution
+## Preregistration Item
 
-*What effort and resources are available for both developing the model and operating the model?* ***HF comment; as written this might be slightly confronting because you could interpret this to include writing explictly about budget constraints which might be confidential. Maybe this could be alleviated with with an example?***
+-   [ ] Time-frame: When must the model be completed by, e.g. to help make a decision?
+-   [ ] What degree of flexibility is required from the model? Might the model need to be quickly reconfigured to explore new scenarios or problems proposed by clients / managers / model-users?
+:::
 
-*What degree of flexibility is required from the model? Might the model need to be quickly reconfigured to explore new scenarios or problems proposed by clients / managers / model-users?*
+## Explain analytical objectives
 
-## 1.3.1 Explain analytical objectives
+::: callout-note
+## Rationale & Explanation
 
-*How will the model be analysed, what analytical questions will the model be used to answer? Examples from ecological decision-making include: to compare the performance of alternative management actions under budget constraint [@Fraser:2017jf] to search for robust decisions under uncertainty [@McDonald-Madden2008], to choose the conservation policy that minimises uncertainty \[insert ref\]. See other examples in [@Moallemi2019].*
+How will the model be analysed, what analytical questions will the model be used to answer?
+Examples from ecological decision-making include: to compare the performance of alternative management actions under budget constraint [@Fraser:2017jf] to search for robust decisions under uncertainty [@McDonald-Madden2008], to choose the conservation policy that minimises uncertainty \[insert ref\].
+See other examples in [@Moallemi2019].
+:::
 
-### 1.3.2 - Identify how the model will tell you about your analytic objectives
+### Identify how the model will tell you about your analytic objectives
 
-*The outcomes should speak directly to the analytical objectives identified in 1.3.1. Outcomes could be qualitative or quantitative. For example, you might be using your model in a scenario analysis to determine which management decision is associated with minimum regret or the highest likelihood of improvement.* To be honest, I don't know how I might apply this to my work or any future works.
+*The outcomes should speak directly to the analytical objectives identified in 1.3.1. Outcomes could be qualitative or quantitative. For example, you might be using your model in a scenario analysis to determine which management decision is associated with minimum regret or the highest likelihood of improvement.*
+
+To be honest, I don't know how I might apply this to my work or any future works.
 Maybe I do not have enough knowledge of this type of research to apply it to my basic ecology research.
 But this isn't to say it's not important, I just wonder if there's a way to make this accessible to non-decision or modelling peeps.
 Like, how would I apply it to the woodland condition analysis?
 
 ## 1.4 Define candidate decisions and method of identifying relevant management actions
 
-*Candidate decisions should be investigated and are specified a priori. Depending on the modelling context, they may be specified by stakeholders, model users or the analyst[@Moallemi2019]. Describe the method used to identify relevant management actions.*
+*Candidate decisions should be investigated and are specified a priori. Depending on the modelling context, they may be specified by stakeholders, model users or the analyst [@Moallemi2019]. Describe the method used to identify relevant management actions.*
 
 ## 1.5 Specify scenarios
 
@@ -118,6 +127,7 @@ Like, how would I apply it to the woodland condition analysis?
 ## 2.2.2 Specify key assumptions and uncertainties underlying the model's design.
 
 -   Describe how uncertainty and variation will be represented in this model. This includes both exogenous uncertainties affecting the system, parametric uncertainty in input data and structural / conceptual nonparametric uncertainty in the model [@Moallemi2019].\*
+-   Explain how any key concepts or terms within problem or decision-making contexts, such as regulatory terms, will be operationalised and defined in a biologically meaningful way to answer the research question appropriately? (Should this last step go here or within define conceptual framework?. ***HF comment. I think it belongs with the conceptual framework***).
 
 ## 2.3 Identify predictor and response variables
 
@@ -188,13 +198,25 @@ Data Evaluation: data reliability reporting
 
 *Explain whether this process will include consultation or feedback from a client, manager, or model user.*
 
-# 3.0 Formalise and Specify Model
+# Formalise and Specify Model
 
 *In this section describe what quantitative methods you will use to build the model/s, explain how they are relevant to the client/manager/user's purpose.*
 
-## 3.1 Choose model class, framework and approach
+## Model class, modelling framework and approach
 
-*Describe what class or approach of model you will use and¬†explain how the choice of model class was informed by the analytical objectives of the model. Modelling approaches lie on a spectrum from correlative or phenomenological to mechanistic or process-based¬† [@Yates2018]; where correlative models use mathematical functions fitted to data to describe underlying processes, and mechanistic models explicitly represent processes and details of component parts of a biological system that are expected to give rise to the data [@White2019a].*
+::: callout-note
+## Explanation
+
+Modelling approaches can be described as occurring on a spectrum from correlative or phenomenological to mechanistic or process-based [@Yates2018]; where correlative models use mathematical functions fitted to data to describe underlying processes, and mechanistic models explicitly represent processes and details of component parts of a biological system that are expected to give rise to the data [@White2019a].
+A model \'class,\' \'family\'\' or \'type\' is often used to describe a set of models each of which has a distinct but related sampling distribution [@Liu2008].
+The model family is driven by choices about the types of variables covered and the nature of their treatment, as well as structural features of the model, such as link functions, spatial and temporal scales of processes and their interactions [@Jakeman:2006ii].
+:::
+
+::: callout-caution
+## Preregistration Item
+
+-   Describe what modelling framework, approach or class of model you will use to implement your model and relate your choice to the model purpose and analytical objectives described in 1.1.2 and 1.1.3.
+:::
 
 ## 3.2 Choose model features and family
 
@@ -218,46 +240,113 @@ Only slight concern is the deceptively difficult task that last sentence represe
 
 *Specify model structural features, including: - the functional form of interactions, - data structures - measures used to specify links, - any bins or discretisation of continuous variables.*
 
-## 3.3 Choose approach for identifying model structure and parameters
+## Describe *approach* for identifying model structure
 
-*This refers to the process of determining the best/most efficient/parsimonious representation of the system at the appropriate scale of concern (Jakeman, 2006) that best meets the analytical objectives specified in the problem formulation phase. Approaches to finding model structure and parameters may be knowledge-supported, or data-driven [@Boets:2015gl]. Model selection methods can include traditional inferential approaches such as unconstrained searches of a dataset for patterns that explain variations in the response variable, or use of ensemble-modelling methods (Barnard et al. 2019). Ensemble modelling procedures might aim to derive a single model, or a multi-model average [@Yates2018]. Refining actions to develop a model could include iteratively dropping parameters or adding them, or aggregating / disaggregating system descriptors, such as dimensionality and processes (Jakeman, 2006). Specify what approach and methods you will use to identify model structure and parameters.*
+::: callout-note
+## Explanation
 
-## 3.4 Choose estimation technique and performance criteria
+This section relates to the process of determining the best/most efficient/parsimonious representation of the system at the appropriate scale of concern [@Jakeman:2006ii] that best meets the analytical objectives specified in the problem formulation phase.
+Model structure refers to the choice of variables included in the model, and the nature of the relationship among those variables.
+Approaches to finding model structure and parameters may be knowledge-supported, or data-driven [@Boets:2015gl].
+Model selection methods can include traditional inferential approaches such as unconstrained searches of a dataset for patterns that explain variations in the response variable, or use of ensemble-modelling methods \[@Barnard2019\].
+Ensemble modelling procedures might aim to derive a single model, or a multi-model average [@Yates2018].
+Refining actions to develop a model could include iteratively dropping parameters or adding them, or aggregating / disaggregating system descriptors, such as dimensionality and processes [@Jakeman:2006ii].
+:::
 
-*Before calibrating the model to the data, the performance criteria on which the calibration is judged are chosen. These criteria and their underlying assumptions should reflect the desired properties of the parameter estimates / structure [@Jakeman:2006ii]. For example, modellers might seek parameter estimates that are robust to outliers, unbiased, and yield appropriate predictive performance. Modellers will need to consider whether the assumptions of the estimation technique yielding those desired criteria are appropriate to the problem at hand. For integrated or sub-divided models, other considerations might include choices about where to disaggregate the model for parameter estimation; e.g. spatial sectioning (streams into reaches) and temporal sectioning (piece-wise linear models) [@Jakeman:2006ii]. Specifying performance criteria a priori is important because it involves pre-specifying how the fitted or quantitative model will be interpreted in advance, avoiding biases like confirmation bias, HARKing, and cherry-picking some performance tests from the full suite of tests undertaken.* HF- I think this paragraph is only relevant to performance criteria- doesn't really explore estimation technique.
-As above though, I'm not sure that this paragraph is neessary given that it's stepped out in the subheadings below
+::: callout-caution
+## Preregistration Item
+
+-   [ ] Specify what approach and methods you will use to identify model structure and parameters.
+-   [ ] If using a knowledge-supported approach to deriving model strucure (either in whole or in part), specify model structural features, including:
+    -   the functional form of interactions (if any)
+    -   data structures,
+    -   measures used to specify links,
+    -   any bins or discretisation of continuous variables [@Jakeman:2006ii],
+    -   any other relevant features of the model structure.
+:::
+
+## Describe parameter estimation technique and performance criteria
+
+*Before calibrating the model to the data, the performance criteria on which the calibration is judged are chosen. These criteria and their underlying assumptions should reflect the desired properties of the parameter estimates / structure [@Jakeman:2006ii]. For example, modellers might seek parameter estimates that are robust to outliers, unbiased, and yield appropriate predictive performance. Modellers will need to consider whether the assumptions of the estimation technique yielding those desired criteria are suited to the problem at hand. For integrated or sub-divided models, other considerations might include choices about where to disaggregate the model for parameter estimation; e.g. spatial sectioning (streams into reaches) and temporal sectioning (piece-wise linear models) [@Jakeman:2006ii].*
+
+NOTE THIS DOESN"T SAY ANYTHING ABOUT PARAMETER ESTIMATION! ONLY PErformacne criteria
+
+### 3.4.2 Choice of parameter estimation technique
+
+::: callout-caution
+## Preregistration Item
+
+-   [ ] Specify what technique you will use to estimate parameter values, and how you will supply non-parametric variables and/or data (e.g. distributed boundary conditions). For example, will you calibrate all variables simultaneously by optimising fit of model outputs to observations, or will you parameterise the model in a piecemeal fashion by either direct measurement, inference from secondary data, or some combination \[@Jakeman:2006ii\].
+-   [ ] Identify which variables will be parameterised directly, such as by expert elicitation or prior knowledge.
+-   [ ] Specify which algorithm(s) you will use for any data-driven parameter estimation, including supervised, or unsupervised machine learning, decision-tree, K-nearest neighbour or cluster algorithms [@Liu2018b].
+:::
 
 ### 3.4.1 Choice of performance criteria
 
 *Specify which suite of performance criteria you will use to judge the performance of the model. Examples include correlation scores, coefficient of determination, specificity, sensitivity, AUC, etcetera (Yates et al. 2018). Relate any underlying assumptions of each criterion to the desired properties of the model, and justify the choice of performance metric in relation into whether it is sensitive to the problem at hand. Explain how you will identify which model features or components are significant or meaningful.*
 
-### 3.4.2 Choice of parameter estimation technique
-
-HF- I think that it might be double dipping to include structure here as well as in 3.3 *Specify what technique you will use to estimate parameter values, and how you will supply non-parametric variables and/or data (e.g. distributed boundary conditions). For example, will you calibrate all variables simultaneously by optimising fit of model outputs to observations, or will you parameterise the model in a piecemeal fashion by either direct measurement, inference from secondary data, or some combination (Jakeman, 2006). Identify which variables were parameterised directly, such as by expert elicitation or prior knowledge. Specify which algorithm(s) you will use for any data-driven parameter estimation, including supervised, or unsupervised machine learning, decision-tree, K-nearest neighbour or cluster algorithms [@Liu2018b].*
-
 ## 3.5 Specify model assumptions and uncertainties
 
 *Specify all assumptions and key uncertainties in the formal model. Describe what gaps exist between the model conception, and the real-world problem, what biases might this introduce and how might this impact any interpretation of the model outputs, and what implications are there on evaluating model-output to inform decisions?*
 
-## 3.6 Specify formal model
+## 3.6 Specify formal model(s)
 
-*Once critical decisions have been made about the approach and method of model specification,translate the conceptual model into the quantitative model. For data-driven and model-selection approaches that determine model structure and parameters, describe any initial model specifications and parameterisations, including for any tune-in parameters. (Should this go here or in model calibration?)*
+*Once critical decisions have been made about the approach and method of model specification, translate the conceptual model into the quantitative model. For data-driven and model-selection approaches that determine model structure and parameters, describe any initial model specifications and parameterisations, including for any tune-in parameters. (Should this go here or in model calibration?)*
 
-# Model Calibration, Model Fitting & Checking
+# Model Calibration, Validation & Checking
 
 ## Model calibration and validation scheme
 
-*Describe how you will validate and check the calibration of the model. The model may be tested on data independent of those used to parameterise the model (external validation), or the model may be cross-validated on random sub-samples of the data used to parameterise the model (internal cross-validation) [@Yates2018; @Barnard2019]. Justify your choices.*
+::: callout-note
+## Explanation
 
-### Describe validation data
+This section pertains to any data calibration, validation or testing schemes that will be implemented.
+For example, the model may be tested on data independent of those used to parameterise the model (external validation), or the model may be cross-validated on random sub-samples of the data used to parameterise the model (internal cross-validation) [@Yates2018; @Barnard2019].
+For some types of models, hyper-parameters are estimated from data, and may be tuned on further independent holdouts of the training data, ("validation data").
+:::
 
-*If partitioning data for cross-validation: describe the approach specifying the number of folds that will be created and the relative size of each. Describe how will you document and/or share the partitioned data such that the data partitioning and any subsequent modelling based on this partitioning can be computationally reproduced.*
+::: callout-caution
+## Preregistration Item
 
-*If using external data: describe any known differences between the training and validation datasets and the size of the validation dataset. Describe how will you document and/or share the external data such that any subsequent modelling can be computationally reproduced.*
+-   [ ] Describe any data calibration, validation and testing scheme you will implement, including any procedures for tuning or estimating model hyper-parameters (if any).
+:::
+
+### Describe calibration/validation data
+
+::: callout-note
+## Explanation & Rationale
+
+The following items pertain to properties of the *datasets* used for calibration (training), validation, and testing.
+
+## Preregistration Item
+
+-   If partitioning data for cross-validation or similar approach:
+
+    -   [ ] Describe the approach specifying the number of folds that will be created, the relative size of each fold, and any stratification methods used for ensuring evenness of groups between folds and between calibration / validation data?
+
+-   If using external / independent holdout data for model testing and evaluation:
+
+    -   [ ] Which data will be used as a the testing data?
+        What method will you be used for generating training / test data subsets?
+
+    -   [ ] Describe any known differences between the training/validation and testing datasets, the relative size of each, as well as any stratification methods used for ensuring evenness of groups between data sets?
+
+    -   [ ] It is preferable that any independent data used for model testing remains unknown to modellers during the process of model development, please describe the relationship modellers have to model validation data, will independent datasets be known or accessible to any modeller or analyst?
+:::
 
 ## Implementation verification
 
-*What Quality Assurance measures will you take to verify the model has been correctly implemented? Tests could include syntax checking of code, and code reviews by peers. Checks for verification implementation should include i) thoroughly checking for bugs or programming errors, and ii) whether the implemented model performs as dictated by the model description [@Grimm:2014es]. Specifying up front quality assurance tests for implementation verification may help to avoid selective debugging.*
+::: callout-caution
+## Preregistration Item
+
+-   [ ] What Quality Assurance measures will you take to verify the model has been correctly implemented?
+    Specifying a priori quality assurance tests for implementation verification may help to avoid selective debugging and silent errors.
+
+    -   Checks for verification implementation should include i) thoroughly checking for bugs or programming errors, and ii) whether the implemented model performs as described by the model description *\[@Grimm:2014es\].*
+
+    -   Qualitative tests could include syntax checking of code, and peer-code review [@ivimey2023].
+        Technical measures include using unit tests, or in-built checks within functions to prevent potential errors.
+:::
 
 ## Model checking
 
@@ -315,7 +404,7 @@ The consequences of assumption violations on the interpretation of results shoul
 HF- I think that this is covered in section 4 with descriptions of validation and checking.
 I'm not sure how this section is different.
 
-*Model Validation & Evaluation - This phase consists of a suite of analyses that collectively inform the decision and whether and when a model is suitable to meet its intended purpose (Augusiak, Van den Brink and Grimm 2014). Errors in design and implementation of the model and their implication on the model output are assessed. Ideally independent data is used against the model outputs to assess whether the model output behaviour exhibits the required accuracy for the model's intended purpose. The outcomes of these analyses build confidence in the model applications and increase understandingof model strengths and limitations. Model evaluation including model analysis and other testing should complement model checking. It should evaluate model checking, and consider over-fitting and extrapolation. The higher the proportion of calibrated, or uncertain parameters, the greater the risk that the model seems to work correctly \[‚Ä¶\] but for the wrong reasons" Evaluation thus complements model checking because we can rule out the chance that the model fits the calibration data well, but has not captured the relevant ecological mecahnisms of the system (Grimm). Evaluation of model outputs against external data in conjunction with the results from model checking provide information about the structural realism and therefore credibility of the model (Grimm et al. 2014).*
+*Model Validation & Evaluation - This phase consists of a suite of analyses that collectively inform the decision and whether and when a model is suitable to meet its intended purpose (Augusiak, Van den Brink and Grimm 2014). Errors in design and implementation of the model and their implication on the model output are assessed. Ideally independent data is used against the model outputs to assess whether the model output behaviour exhibits the required accuracy for the model's intended purpose. The outcomes of these analyses build confidence in the model applications and increase understanding of model strengths and limitations. Model evaluation including model analysis and other testing should complement model checking. It should evaluate model checking, and consider over-fitting and extrapolation. The higher the proportion of calibrated, or uncertain parameters, the greater the risk that the model seems to work correctly \[‚Ä¶\] but for the wrong reasons" Evaluation thus complements model checking because we can rule out the chance that the model fits the calibration data well, but has not captured the relevant ecological mecahnisms of the system (Grimm). Evaluation of model outputs against external data in conjunction with the results from model checking provide information about the structural realism and therefore credibility of the model (Grimm et al. 2014).*
 
 ## 5.1 Model output corroboration
 
